--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
 		"prettier/prettier": "error",
 		"camelcase": ["error"],
 		"eqeqeq": ["error", "always"],
-		"no-unused-vars": "off"
+		"no-unused-vars": "off",
+		"no-undef": "off"
 	},
 	"root": true
 }
