--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"ky": "^0.33.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.43.2",
 		"react-query": "^3.39.3",
 		"react-router-dom": "^6.7.0",
 		"react-scripts": "^5.0.1",
