--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.26.0",
     "@tanstack/react-query-devtools": "^4.26.0",
+    "antd": "^5.3.1",
     "clsx": "^1.2.1",
     "ky": "^0.33.2",
     "react": "^18.2.0",
