--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "sass": "^1.61.0"
+    "sass": "^1.61.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
