--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-use": "^17.4.0",
     "sass": "^1.61.0",
     "styled-components": "^5.3.9"
   },
