--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-jwt": "^1.1.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-use": "^17.4.0",
