--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview",
     "lintFix": "eslint ./src/**/*.ts --fix && eslint ./src/**/*.tsx --fix",
     "format": "prettier --write ./src/",
+    "playwright": "npx playwright test && npx playwright show-report",
+    "vitest": "npx vitest --run --coverage --dir=tests/Vitest",
+    "test": "pnpm run vitest && pnpm run playwright",
     "prepare": "husky install",
     "precommit": "pnpm run lintFix && pnpm run format"
   },
@@ -30,13 +33,16 @@
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
+    "@playwright/test": "^1.34.3",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-v8": "^0.32.0",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -48,8 +54,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "prettier": "^2.8.7",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^4.2.3",
-    "vite": "^4.2.1"
+    "vite": "^4.2.1",
+    "vitest": "^0.32.0"
   }
 }
