--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "src/**/*.tsx",
     "src/__test__/**/*.(test|spec).(ts|tsx)",
     "*.config.ts",
-    "./src/**/*"
+    "./src/**/*",
+    "./tests/**/*"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
